--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-streamlit==1.29.0
-requests==2.31.0
-icalendar==5.0.12
-websockets==12.0
-python-dotenv==1.0.1
+streamlit
+requests
+icalendar
+websockets
+python-dotenv
 agno
 mcp
 google-genai
+
 
